js script added

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <div class="startContainer">
         <h1>Click-Match-Memory Game</h1>
         <div class="content-heading">
+            <div class="span"></div>
             <div id="moves-count"></div>
             <div id="time"></div>
         </div>
@@ -19,6 +20,31 @@
         <div class="startContainer">
             <button id="start">Start Game</button>
         </div>
+    </div>
+    <div class="row">
+        <div class="card"><img src="" alt=""></div>
+        <div class="card"></div>
+        <div class="card"></div>
+    </div>
+    <div class="row">
+        <div class="card"><img src="" alt=""></div>
+        <div class="card"><img src="" alt=""></div>
+        <div class="card"><img src="" alt=""></div>
+    </div>
+    <div class="row">
+        <div class="card"><img src="" alt=""></div>
+        <div class="card"><img src="" alt=""></div>
+        <div class="card"><img src="" alt=""></div>
+    </div>
+    <div class="row">
+        <div class="card"><img src="" alt=""></div>
+        <div class="card"><img src="" alt=""></div>
+        <div class="card"><img src="" alt=""></div>
+    </div>
+    <div class="row">
+        <div class="card"><img src="" alt=""></div>
+        <div class="card"><img src="" alt=""></div>
+        <div class="card"><img src="" alt=""></div>
     </div>
     <script src="./script.js"></script>
 </body>
