--- a/index.html
+++ b/index.html
@@ -1,51 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <div class="startContainer">
-        <h1>Click-Match-Memory Game</h1>
-        <div class="content-heading">
-            <div class="span"></div>
-            <div id="moves-count"></div>
-            <div id="time"></div>
-        </div>
-        <div class="gamebox">
-            <button id="stop" class="hide">Stop Game</button>
-        </div>
-        <div class="startContainer">
-            <button id="start">Start Game</button>
-        </div>
+  <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Memory Game</title>
+    <link rel="stylesheet" href="stle.css" />
+  </head>
+  <body>
+    <div class="wrapper">
+      <div class="stats-container">
+        <div id="moves-count"></div>
+        <div id="time"></div>
+      </div>
+      <div class="game-container"></div>
+      <button id="stop" class="hide">Stop Game</button>
     </div>
-    <div class="row">
-        <div class="card"><img src="" alt=""></div>
-        <div class="card"></div>
-        <div class="card"></div>
+    <div class="controls-container">
+      <p id="result"></p>
+      <button id="start">Start Game</button>
     </div>
-    <div class="row">
-        <div class="card"><img src="" alt=""></div>
-        <div class="card"><img src="" alt=""></div>
-        <div class="card"><img src="" alt=""></div>
-    </div>
-    <div class="row">
-        <div class="card"><img src="" alt=""></div>
-        <div class="card"><img src="" alt=""></div>
-        <div class="card"><img src="" alt=""></div>
-    </div>
-    <div class="row">
-        <div class="card"><img src="" alt=""></div>
-        <div class="card"><img src="" alt=""></div>
-        <div class="card"><img src="" alt=""></div>
-    </div>
-    <div class="row">
-        <div class="card"><img src="" alt=""></div>
-        <div class="card"><img src="" alt=""></div>
-        <div class="card"><img src="" alt=""></div>
-    </div>
-    <script src="./script.js"></script>
-</body>
+    <!-- Script -->
+    <script src="script.js"></script>
+  </body>
 </html>
